# fast_api_blog

./: README.md  SETUP_UV.md  auth.py  blog.db  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  snippets.txt
routers/: posts.py  users.py
static/js/: auth.js
templates/: account.html  home.html  layout.html  login.html  post.html
